kube/alrest/lurker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lurker
spec:
  selector:
    app: lurker
  ports:
    - port: 80
      targetPort: 8015
      name: http
