kube/alrest/lurker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lurker
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lurker.cetacean.club
      secretName: lurker-cetacean-club-tls
  rules:
    - host: lurker.cetacean.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lurker
                port:
                  name: http
